Add commentary in raw_process notebook

--- a/src/console/notebooks/cic/raw_process.ipynb
+++ b/src/console/notebooks/cic/raw_process.ipynb
@@ -18,21 +18,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reload_output_if_exists = True\n",
-    "self_classify = False"
+    "reload_output_if_exists = True \n",
+    "\"\"\"Indicates whether to reload any outputs from the Notebook if they already exist.\"\"\"\n",
+    "\n",
+    "self_classify = False\n",
+    "\"\"\"Indicates whether to use the LLM to determine its own classifications for the data, or to use the pre-defined `classifications`.\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For processing with pre-determined classifications\n",
     "classifications = [\n",
     "    {\n",
     "        \"classification\": \"Integration\",\n",
@@ -146,12 +148,13 @@
     "        \"classification\": \"None\",\n",
     "        \"description\": \"No challenges.\"\n",
     "    }\n",
-    "]"
+    "]\n",
+    "\"\"\"The classifications to use for the data. If `self_classify` is False, these classifications will be used to classify the data. Otherwise, they will be ignored.\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -168,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,14 +194,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "env_vars = dotenv_values(f\"{wdir}/configuration/.env\")\n",
     "notebooks_path = os.path.join(wdir, \"src/console/notebooks/cic/\")\n",
     "\n",
-    "csv_fpath = os.path.join(notebooks_path, \"input\", csv_fname)\n",
+    "input_dir = os.path.join(notebooks_path, \"input\")\n",
+    "csv_fpath = os.path.join(input_dir, csv_fname)\n",
     "output_dir = os.path.join(notebooks_path, \"output\", os.path.splitext(os.path.basename(csv_fname))[0])\n",
     "classifications_output_dir = os.path.join(output_dir, \"self_classifications\" if self_classify else \"classifications\")\n",
     "\n",
@@ -223,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,8 +318,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Self-Classification\n",
+    "\n",
+    "This prompting technique will use the LLM to determine the key observations/challenges associated with the data point provided. The criteria for determining classifications uses logic regarding common issues and opportunities to improve cloud products/services."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,6 +341,7 @@
     "- Key observations should be specific and detailed to provide the most value.\n",
     "- Ensure the key observations are based on the evidence provided.\n",
     "- Each observation should be unique.\n",
+    "- Provide a maximum of 5 key observations.\n",
     "- There is no limit to the number of key observations you can provide.\n",
     "\n",
     "## Key Observation Examples\n",
@@ -346,8 +360,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pre-Defined Classification\n",
+    "\n",
+    "This prompting technique takes a list of pre-defined classification names and descriptions to help the model narrow down the scope of the classification. The output will be based on the most relevant matches to the list."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +383,7 @@
     "- Ensure the data classifications are based on facts, both quantitative and qualitative.\n",
     "- You must only classify data based on known facts. Do not assume or provide indication that a classification is associated if detail is not provided.\n",
     "- Only return relevant data classifications that you are highly confident of.\n",
-    "- There is no limit to the number of data classifications you can provide.\n",
+    "- Provide a maximum of 5 classifications per data point.\n",
     "- If no classification is applicable, provide an empty list. Ignore classifications that are not applicable.\n",
     "\n",
     "## Classifications\n",
@@ -370,8 +393,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fact Generation\n",
+    "\n",
+    "To support both classification techniques, this prompting technique will use the model to extract key facts from the provided context, and make logical inferences based on the context to create a fact sheet. This will be used in conjunction with the context to reduce the chances of hallucination, improving the quality of the output."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,8 +471,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Non-Self Classification] - Generate classification embeddings\n",
+    "\n",
+    "When adopting the non-self classification technique, in order to determine the similarity of the LLM classifications to the context provided, first generate the embeddings for the classification descriptions.\n",
+    "\n",
+    "These will be used later for cosine similarity calculations."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if reload_output_if_exists and os.path.exists(os.path.join(input_dir, \"classifications.json\")):\n",
+    "    classifications = json.load(open(os.path.join(input_dir, \"classifications.json\"), \"r\"))\n",
+    "    \n",
+    "classifications_updated = False\n",
+    "\n",
+    "if not self_classify:\n",
+    "    for classification in classifications:\n",
+    "        if \"embedding\" not in classification:\n",
+    "            classification[\"embedding\"] = get_embedding(classification[\"description\"])\n",
+    "            classifications_updated = True\n",
+    "\n",
+    "if classifications_updated:\n",
+    "    create_json_file(os.path.join(input_dir, \"classifications.json\"), classifications)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load previous data\n",
+    "\n",
+    "To reduce reliance on consistently loading data out of an input CSV file, the data stored as JSON in the output directory is loaded back into the notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,12 +523,23 @@
     "    for f in os.listdir(output_dir):\n",
     "        if f.endswith(\".json\"):\n",
     "            with open(os.path.join(output_dir, f), 'r') as file:\n",
-    "                data.append(json.load(file))"
+    "                data.append(json.load(file))\n",
+    "                \n",
+    "print(f\"Loaded {len(data)} existing data points\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load previous data classifications\n",
+    "\n",
+    "Similarly, the classifications for each data point are loaded back into the notebook so not to process them again."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,12 +552,29 @@
     "            with open(os.path.join(classifications_output_dir, f), \"r\") as file:\n",
     "                dp_observations = json.load(file)\n",
     "                all_dp_observations.extend(dp_observations)\n",
-    "                processed_response_ids.append(f.split(\".\")[0])"
+    "                processed_response_ids.append(f.split(\".\")[0])\n",
+    "                \n",
+    "print(f\"Loaded {len(all_dp_observations)} existing data point classifications\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load data points from CSV\n",
+    "\n",
+    "For any data points not yet processed, we load from the CSV file. \n",
+    "\n",
+    "The `skip_chunks` variable is used to control which data points to load for processing. This is for testing purposes only to not process 1,000s of data points.\n",
+    "\n",
+    "An embedding is created for each data point which will be later used to determine the similarity to the classification embeddings.\n",
+    "\n",
+    "The data points are then saved out to the output directory as JSON."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,16 +621,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_data = [d for d in data if d[\"response_id\"] not in processed_response_ids]"
+    "filtered_data = [d for d in data if d[\"response_id\"] not in processed_response_ids]\n",
+    "\n",
+    "print(f\"Determined {len(filtered_data)} new data points for classification\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classification via LLM\n",
+    "\n",
+    "For each data point, the LLM is used to determine the key observations/challenges associated with it.\n",
+    "\n",
+    "First, the fact sheet is generated for the data point.\n",
+    "\n",
+    "Next, the fact sheet and context are concatenated and passed to the LLM for classification.\n",
+    "\n",
+    "After classification, each data point classification embedding is compared to the original context to determine the similarity for that classification. _Note: We follow this approach rather than using the LLM, as LLMs are not well-suited for determining numeric similarity between text. Prompt the LLM to return a score would result in wild variations in the scores returned._\n",
+    "\n",
+    "#### Self-Classification\n",
+    "\n",
+    "For the self-classification scenario, the LLM is used to determine its own key observations/challenges associated with the data point provided. The criteria for determining classifications uses logic regarding common issues and opportunities to improve cloud products/services.\n",
+    "\n",
+    "#### Pre-Defined Classification\n",
+    "\n",
+    "For the pre-defined classification scenario, the `classifications` are used to narrow down the scope of the classification using the LLM. The output will be based on the most relevant matches to the list."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,8 +704,10 @@
     "            )\n",
     "        else:\n",
     "            # 2 - Classify the input data based on the provided classifications\n",
+    "            classifications_json = [{\"classification\": c[\"classification\"], \"description\": c[\"description\"]} for c in classifications]\n",
+    "            \n",
     "            execute_messages = [\n",
-    "                ChatCompletionSystemMessageParam(role=\"system\", content=classify_prompt.format(classifications=json.dumps(classifications))),\n",
+    "                ChatCompletionSystemMessageParam(role=\"system\", content=classify_prompt.format(classifications=json.dumps(classifications_json))),\n",
     "                ChatCompletionUserMessageParam(role=\"user\", content=context_content)\n",
     "            ]\n",
     "            \n",
@@ -597,7 +725,7 @@
     "\n",
     "        # 3 - Get similarity score between the verbatim and the observations            \n",
     "        for observation in dp_observations[\"observations\"]:\n",
-    "            observation[\"embedding\"] = get_embedding(observation[\"short_name\"])\n",
+    "            observation[\"embedding\"] = get_embedding(observation[\"short_name\"]) if self_classify else next(c[\"embedding\"] for c in classifications if c[\"classification\"] == observation[\"short_name\"])\n",
     "            similarity = cosine_similarity([dp[\"embedding\"]], [observation[\"embedding\"]])\n",
     "            observation[\"similarity\"] = round(similarity[0][0], 2)\n",
     "        \n",
