--- a/src/console/notebooks/cic/raw_process.ipynb
+++ b/src/console/notebooks/cic/raw_process.ipynb
@@ -38,7 +38,7 @@
     "classifications = [\n",
     "    {\n",
     "        \"classification\": \"Integration\",\n",
-    "        \"description\": \"Key issues include difficulting integrating capabilities of cloud services into solutions, ensuring seamless interoperability.\"\n",
+    "        \"description\": \"Key issues include difficulties integrating capabilities of cloud services into solutions, ensuring seamless interoperability.\"\n",
     "    },\n",
     "    {\n",
     "        \"classification\": \"Breadth\",\n",
@@ -180,13 +180,11 @@
     "from dotenv import dotenv_values\n",
     "from openai import AzureOpenAI\n",
     "from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
-    "from openai.types.chat.chat_completion import ChatCompletionMessage\n",
     "from openai.types.chat.chat_completion_system_message_param import ChatCompletionSystemMessageParam\n",
     "from openai.types.chat.chat_completion_user_message_param import ChatCompletionUserMessageParam\n",
     "from typing import Optional, List\n",
     "from pydantic import BaseModel, Field\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "import time\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed"
@@ -474,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Non-Self Classification] - Generate classification embeddings\n",
+    "### [Pre-Determined Classification] - Generate classification embeddings\n",
     "\n",
     "When adopting the non-self classification technique, in order to determine the similarity of the LLM classifications to the context provided, first generate the embeddings for the classification descriptions.\n",
     "\n",
@@ -588,7 +586,7 @@
     "    df = next(chunk_iterator, None)\n",
     "    if df is not None:\n",
     "        for j, row in df.iterrows():\n",
-    "            if row[\"ResponseId\"] in processed_response_ids:\n",
+    "            if row[\"ResponseId\"] in processed_response_ids or row[\"ResponseId\"] in [dp[\"response_id\"] for dp in data]:\n",
     "                continue\n",
     "            \n",
     "            attribution = [\n",
@@ -724,13 +722,24 @@
     "        completion_tokens += observation_completion.usage.completion_tokens\n",
     "\n",
     "        # 3 - Get similarity score between the verbatim and the observations            \n",
-    "        for observation in dp_observations[\"observations\"]:\n",
-    "            observation[\"embedding\"] = get_embedding(observation[\"short_name\"]) if self_classify else next(c[\"embedding\"] for c in classifications if c[\"classification\"] == observation[\"short_name\"])\n",
-    "            similarity = cosine_similarity([dp[\"embedding\"]], [observation[\"embedding\"]])\n",
-    "            observation[\"similarity\"] = round(similarity[0][0], 2)\n",
-    "        \n",
+    "        def process_observation(obs, dp_embedding):\n",
+    "            if self_classify:\n",
+    "                embedding = get_embedding(obs[\"short_name\"])\n",
+    "            else:\n",
+    "                embedding = next(c[\"embedding\"] for c in classifications if c[\"classification\"] == obs[\"short_name\"])\n",
+    "            similarity = cosine_similarity([dp_embedding], [embedding])\n",
+    "            obs[\"embedding\"] = embedding\n",
+    "            obs[\"similarity\"] = round(similarity[0][0], 1)\n",
+    "            return obs\n",
+    "\n",
+    "        with ThreadPoolExecutor() as executor:\n",
+    "            dp_observations[\"observations\"] = list(\n",
+    "                executor.map(lambda obs: process_observation(obs, dp[\"embedding\"]), dp_observations[\"observations\"])\n",
+    "            )\n",
+    "                    \n",
     "        execution_time = sw.get_current_elapsed()\n",
     "        \n",
+    "        dp_observations[\"response_id\"] = dp[\"response_id\"]\n",
     "        dp_observations[\"execution_time\"] = execution_time\n",
     "        dp_observations[\"prompt_tokens\"] = prompt_tokens\n",
     "        dp_observations[\"completion_tokens\"] = completion_tokens\n",
@@ -738,6 +747,27 @@
     "        all_dp_observations.append(dp_observations)\n",
     "        \n",
     "        create_json_file(os.path.join(classifications_output_dir, f\"{dp['response_id']}.json\"), dp_observations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_csv_fpath = os.path.join(output_dir, \"output.csv\")\n",
+    "\n",
+    "output_data = []\n",
+    "\n",
+    "for dp in data:\n",
+    "    dp_classifications = next(d for d in all_dp_observations if d[\"response_id\"] == dp[\"response_id\"])\n",
+    "    dp_keywords = \", \".join([obs[\"short_name\"] for obs in dp_classifications[\"observations\"]])\n",
+    "    dp_scores = \", \".join([f\"{obs['short_name']}: {obs['similarity']}\" for obs in dp_classifications[\"observations\"]])\n",
+    "    \n",
+    "    output_data.append([dp[\"response_id\"], dp[\"attribution\"], dp[\"verbatim\"], dp_keywords, dp_scores])\n",
+    "    \n",
+    "output_df = pd.DataFrame(output_data, columns=[\"ResponseId\", \"Attribution\", \"Verbatim\", \"Keyword\", \"Model Classification Scores\"])\n",
+    "output_df.to_csv(output_csv_fpath, index=False)"
    ]
   }
  ],
