--- a/src/console/notebooks/cic/raw2bronze.ipynb
+++ b/src/console/notebooks/cic/raw2bronze.ipynb
@@ -318,168 +318,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## SQLiteHelper Overview\n",
-    "\n",
-    "- **LoadDatabase**: Opens a connection to the specified SQLite file (or in-memory DB).\n",
-    "- **ExecuteNonQuery**: Runs SQL statements that don't return rows (e.g., CREATE, INSERT, UPDATE, DELETE).\n",
-    "- **ExecuteQuery**: Runs a SQL query and returns each row as a dictionary of column-value pairs.\n",
-    "- **CreateTableOrView**: Creates a new table or view using a given SQL script.\n",
-    "- **DropTableOrView**: Drops an existing table or view if it exists.\n",
-    "- **UpdateTableRow**: Updates a single row in a table by matching a key column and setting new column values."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
    "source": [
-    "/// <summary>\n",
-    "/// Helper class for working with SQLite databases.\n",
-    "/// </summary>\n",
-    "public static class SQLiteHelper\n",
-    "{\n",
-    "    /// <summary>\n",
-    "    /// Loads a SQLite database from a file and returns an open connection.\n",
-    "    /// </summary>\n",
-    "    /// <param name=\"sqliteDbPath\">Path to the SQLite database file.</param>\n",
-    "    /// <returns>An open <see cref=\"SqliteConnection\"/>.</returns>\n",
-    "    public static SqliteConnection LoadDatabase(string sqliteDbPath)\n",
-    "    {\n",
-    "        var connection = new SqliteConnection($\"Data Source={sqliteDbPath}\");\n",
-    "        connection.Open();\n",
-    "        return connection;\n",
-    "    }\n",
+    "// include a local class named VectorMath - this class is used to calculate the cosine similarity between two vectors\n",
     "\n",
-    "    /// <summary>\n",
-    "    /// Executes a non-query SQL statement (e.g., INSERT, UPDATE, DELETE, or DDL) against the database.\n",
-    "    /// </summary>\n",
-    "    /// <param name=\"connection\">An open <see cref=\"SqliteConnection\"/>.</param>\n",
-    "    /// <param name=\"sql\">The SQL statement to execute.</param>\n",
-    "    public static void ExecuteNonQuery(SqliteConnection connection, string sql)\n",
-    "    {\n",
-    "        using var command = connection.CreateCommand();\n",
-    "        command.CommandText = sql;\n",
-    "        command.ExecuteNonQuery();\n",
-    "    }\n",
     "\n",
-    "    /// <summary>\n",
-    "    /// Executes a SQL query that returns rows and returns the results as a list of dictionaries.\n",
-    "    /// Each dictionary represents a row with column names as keys.\n",
-    "    /// </summary>\n",
-    "    /// <param name=\"connection\">An open <see cref=\"SqliteConnection\"/>.</param>\n",
-    "    /// <param name=\"sql\">The SQL query to execute.</param>\n",
-    "    /// <returns>A list of dictionaries representing the query result rows.</returns>\n",
-    "    public static List<Dictionary<string, object>> ExecuteQuery(SqliteConnection connection, string sql)\n",
-    "    {\n",
-    "        var results = new List<Dictionary<string, object>>();\n",
-    "        using var command = connection.CreateCommand();\n",
-    "        command.CommandText = sql;\n",
-    "        using var reader = command.ExecuteReader();\n",
-    "        while (reader.Read())\n",
-    "        {\n",
-    "            var row = new Dictionary<string, object>();\n",
-    "            for (int i = 0; i < reader.FieldCount; i++)\n",
-    "            {\n",
-    "                // If the field is DBNull, assign null.\n",
-    "                row[reader.GetName(i)] = reader.IsDBNull(i) ? null : reader.GetValue(i);\n",
-    "            }\n",
-    "            results.Add(row);\n",
-    "        }\n",
-    "        return results;\n",
-    "    }\n",
-    "\n",
-    "    /// <summary>\n",
-    "    /// Executes a SQL statement that creates a new table or view.\n",
-    "    /// </summary>\n",
-    "    /// <param name=\"connection\">An open SQLite connection.</param>\n",
-    "    /// <param name=\"createQuery\">The CREATE TABLE or CREATE VIEW SQL statement.</param>\n",
-    "    public static void CreateTableOrView(SqliteConnection connection, string createQuery)\n",
-    "    {\n",
-    "        using var command = connection.CreateCommand();\n",
-    "        command.CommandText = createQuery;\n",
-    "        command.ExecuteNonQuery();\n",
-    "    }\n",
-    "\n",
-    "    public static void DropTableOrView(SqliteConnection connection, string objectName, string objectType = \"table\")\n",
-    "    {\n",
-    "        string sql;\n",
-    "        if (objectType.Equals(\"table\", StringComparison.OrdinalIgnoreCase))\n",
-    "        {\n",
-    "            sql = $\"DROP TABLE IF EXISTS [{objectName}];\";\n",
-    "        }\n",
-    "        else if (objectType.Equals(\"view\", StringComparison.OrdinalIgnoreCase))\n",
-    "        {\n",
-    "            sql = $\"DROP VIEW IF EXISTS [{objectName}];\";\n",
-    "        }\n",
-    "        else\n",
-    "        {\n",
-    "            throw new ArgumentException(\"objectType must be either 'table' or 'view'\");\n",
-    "        }\n",
-    "        \n",
-    "        using var command = connection.CreateCommand();\n",
-    "        command.CommandText = sql;\n",
-    "        command.ExecuteNonQuery();\n",
-    "    }\n",
-    "\n",
-    "    public static void UpdateTableRow(\n",
-    "    SqliteConnection connection, \n",
-    "    string tableName, \n",
-    "    string keyColumn, \n",
-    "    object keyValue, \n",
-    "    Dictionary<string, object> updatedValues)\n",
-    "    {\n",
-    "        // Build the SET clause from the dictionary.\n",
-    "        var setClauses = updatedValues.Select((kv, i) => $\"[{kv.Key}] = @p{i}\").ToList();\n",
-    "        string setClause = string.Join(\", \", setClauses);\n",
-    "        string sql = $\"UPDATE [{tableName}] SET {setClause} WHERE [{keyColumn}] = @keyValue;\";\n",
-    "        \n",
-    "        using var command = connection.CreateCommand();\n",
-    "        command.CommandText = sql;\n",
-    "        \n",
-    "        // Add parameters for updated columns.\n",
-    "        int index = 0;\n",
-    "        foreach (var kv in updatedValues)\n",
-    "        {\n",
-    "            command.Parameters.AddWithValue($\"@p{index}\", kv.Value);\n",
-    "            index++;\n",
-    "        }\n",
-    "        // Add the key value parameter.\n",
-    "        command.Parameters.AddWithValue(\"@keyValue\", keyValue);\n",
-    "        \n",
-    "        command.ExecuteNonQuery();\n",
-    "    }\n",
-    "\n",
-    "    public static List<string> GetTableColumns(SqliteConnection connection, string tableName)\n",
-    "    {\n",
-    "        var columns = new List<string>();\n",
-    "        using (var command = connection.CreateCommand())\n",
-    "        {\n",
-    "            command.CommandText = $\"PRAGMA table_info([{tableName}]);\";\n",
-    "            using (var reader = command.ExecuteReader())\n",
-    "            {\n",
-    "                while(reader.Read())\n",
-    "                {\n",
-    "                    columns.Add(reader[\"name\"].ToString());\n",
-    "                }\n",
-    "            }\n",
-    "        }\n",
-    "        return columns;\n",
-    "    }\n",
-    "}"
+    "#load \"VectorMath.cs\"\n",
+    "#load \"ClassificationNode.cs\"\n",
+    "#load \"SQLiteHelper.cs\""
    ]
   },
   {
@@ -547,13 +400,13 @@
     "    Console.WriteLine(string.Join(\", \", row.Select(kvp => $\"{kvp.Key}={kvp.Value}\")));\n",
     "}\n",
     "\n",
-    "query = @\"select count(*) from MyView\n",
-    "         where Q026_19 = 'Very satisfied';\";\n",
-    "results = SQLiteHelper.ExecuteQuery(dbhelper, query);\n",
-    "foreach (var row in results)\n",
-    "{\n",
-    "    Console.WriteLine(string.Join(\", \", row.Select(kvp => $\"{kvp.Key}={kvp.Value}\")));\n",
-    "}"
+    "// query = @\"select count(*) from MyView\n",
+    "//          where Q026_19 = 'Very satisfied';\";\n",
+    "// results = SQLiteHelper.ExecuteQuery(dbhelper, query);\n",
+    "// foreach (var row in results)\n",
+    "// {\n",
+    "//     Console.WriteLine(string.Join(\", \", row.Select(kvp => $\"{kvp.Key}={kvp.Value}\")));\n",
+    "// }"
    ]
   },
   {
